objects/Company_Setup__c/Company_Setup__c.object-meta.xml
<CustomObject>
    <label>Company Setup</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>