objects/Company_Setup__c/fields/Allow_Posting_From__c.field-meta.xml
<CustomField>
    <fullName>Allow_Posting_From__c</fullName>
    <label>Allow Posting From</label>
    <type>Date</type>
</CustomField>