objects/Company_Setup__c/fields/Allow_Posting_To__c.field-meta.xml
<CustomField>
    <fullName>Allow_Posting_To__c</fullName>
    <label>Allow Posting To</label>
    <type>Date</type>
</CustomField>