objects/Company_Setup__c/fields/AR_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>AR_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AR GL Account</label>
    <referenceTo>GL_Account__c</referenceTo>
    <relationshipLabel>Company Setup</relationshipLabel>
    <relationshipName>Company_Setup</relationshipName>
    <type>Lookup</type>
</CustomField>