objects/Company_Setup__c/fields/Company_Logo__c.field-meta.xml
<CustomField>
    <fullName>Company_Logo__c</fullName>
    <label>Company Logo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>