objects/Company_Setup__c/fields/Company_Pay_Rule__c.field-meta.xml
<CustomField>
    <fullName>Company_Pay_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Pay Rule</label>
    <referenceTo>Pay_Rule__c</referenceTo>
    <relationshipLabel>Company Setup</relationshipLabel>
    <relationshipName>Company_Setup</relationshipName>
    <type>Lookup</type>
</CustomField>