objects/Company_Setup__c/fields/Corporate_Overhead__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Overhead__c</fullName>
    <inlineHelpText>Corporate overhead is indirect expenses related to running the business. Specifically for ACV Enviro, this includes Indirect labor, SG&amp;A labor, rent &amp; utilities.</inlineHelpText>
    <label>Corporate Overhead</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>