objects/Company_Setup__c/fields/Coupa_PO_Last_Synced__c.field-meta.xml
<CustomField>
    <fullName>Coupa_PO_Last_Synced__c</fullName>
    <label>Coupa PO Last Synced</label>
    <type>DateTime</type>
</CustomField>