objects/Company_Setup__c/fields/Day_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Day_Unit_of_Measure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Day Unit of Measure</label>
    <referenceTo>Unit_of_Measure__c</referenceTo>
    <relationshipLabel>Company Setup</relationshipLabel>
    <relationshipName>Company_Setup</relationshipName>
    <type>Lookup</type>
</CustomField>