objects/Company_Setup__c/fields/Default_Billing_Rule__c.field-meta.xml
<CustomField>
    <fullName>Default_Billing_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Billing Rule</label>
    <referenceTo>Billing_Rule__c</referenceTo>
    <relationshipLabel>Company Setup</relationshipLabel>
    <relationshipName>Company_Setup</relationshipName>
    <type>Lookup</type>
</CustomField>