objects/Company_Setup__c/fields/Default_Days_to_Receive__c.field-meta.xml
<CustomField>
    <fullName>Default_Days_to_Receive__c</fullName>
    <label>Default Days to Receive</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>