objects/Company_Setup__c/fields/Default_Energy_Insurance_Resource__c.field-meta.xml
<CustomField>
    <fullName>Default_Energy_Insurance_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Energy Insurance Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Company Setup (Default Energy Insurance Resource)</relationshipLabel>
    <relationshipName>Company_Setup3</relationshipName>
    <type>Lookup</type>
</CustomField>