objects/Company_Setup__c/fields/Default_Equipment_Resource__c.field-meta.xml
<CustomField>
    <fullName>Default_Equipment_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Equipment Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Company Setup (Default Equipment Resource)</relationshipLabel>
    <relationshipName>Company_Setup_Default_Equipment_Resource</relationshipName>
    <type>Lookup</type>
</CustomField>