objects/Company_Setup__c/fields/Default_ESIC_Surcharge_Resource__c.field-meta.xml
<CustomField>
    <fullName>Default_ESIC_Surcharge_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default ESIC Surcharge Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Company Setup (Default ESIC Surcharge Resource)</relationshipLabel>
    <relationshipName>Company_Setup_ESIC</relationshipName>
    <type>Lookup</type>
</CustomField>