objects/Company_Setup__c/fields/Default_Field_Remediation_Resource__c.field-meta.xml
<CustomField>
    <fullName>Default_Field_Remediation_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Field Remediation Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Company Setup (FR)</relationshipLabel>
    <relationshipName>Company_Setup_FR</relationshipName>
    <type>Lookup</type>
</CustomField>