objects/Company_Setup__c/fields/Default_Fuel_Surcharge_Pct__c.field-meta.xml
<CustomField>
    <fullName>Default_Fuel_Surcharge_Pct__c</fullName>
    <label>Default Fuel Surcharge %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>