objects/Company_Setup__c/fields/Default_Fuel_Surcharge_Resource__c.field-meta.xml
<CustomField>
    <fullName>Default_Fuel_Surcharge_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Fuel Surcharge Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Company Setup (Default Fuel Surcharge Resource)</relationshipLabel>
    <relationshipName>Company_Setup_FS</relationshipName>
    <type>Lookup</type>
</CustomField>