objects/Company_Setup__c/fields/Default_Inter_Co_Tax_Area__c.field-meta.xml
<CustomField>
    <fullName>Default_Inter_Co_Tax_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Inter-Co Tax Area</label>
    <referenceTo>Tax_Area__c</referenceTo>
    <relationshipLabel>Company Setup</relationshipLabel>
    <relationshipName>Company_Setup</relationshipName>
    <type>Lookup</type>
</CustomField>