objects/Company_Setup__c/fields/Default_Labor_Resource__c.field-meta.xml
<CustomField>
    <fullName>Default_Labor_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Temp Labor Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Company Setup (Default Labor Resource)</relationshipLabel>
    <relationshipName>Company_Setup2</relationshipName>
    <type>Lookup</type>
</CustomField>