objects/Company_Setup__c/fields/Default_Lump_Sum_Resource__c.field-meta.xml
<CustomField>
    <fullName>Default_Lump_Sum_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Bundled Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Company Setup (Default_Lump_Sum_Resource)</relationshipLabel>
    <relationshipName>Company_Setup_LS</relationshipName>
    <type>Lookup</type>
</CustomField>