objects/Company_Setup__c/fields/Default_Manifest_Fee_Resource__c.field-meta.xml
<CustomField>
    <fullName>Default_Manifest_Fee_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Manifest Fee Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Company Setup (Default Manifest Fee Resource)</relationshipLabel>
    <relationshipName>Company_Setup5</relationshipName>
    <type>Lookup</type>
</CustomField>