objects/Company_Setup__c/fields/Default_Misc_Charges_Taxes_Resource__c.field-meta.xml
<CustomField>
    <fullName>Default_Misc_Charges_Taxes_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Misc. Charges &amp; Taxes Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Company Setup (Default Misc. Charges &amp; Taxes Resource)</relationshipLabel>
    <relationshipName>Company_Setup_MISC</relationshipName>
    <type>Lookup</type>
</CustomField>