objects/Company_Setup__c/fields/Default_Rental_Resource__c.field-meta.xml
<CustomField>
    <fullName>Default_Rental_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Rental Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Company Setup (Default Rental Resource)</relationshipLabel>
    <relationshipName>Company_Setup</relationshipName>
    <type>Lookup</type>
</CustomField>