objects/Company_Setup__c/fields/Default_Safety_Plan_Resource__c.field-meta.xml
<CustomField>
    <fullName>Default_Safety_Plan_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Safety Plan Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Company Setup (Default Safety Plan Resource)</relationshipLabel>
    <relationshipName>Company_Setup4</relationshipName>
    <type>Lookup</type>
</CustomField>