objects/Company_Setup__c/fields/Default_Subcontractor_Resource__c.field-meta.xml
<CustomField>
    <fullName>Default_Subcontractor_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Subcontractor Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Company Setup (Resource)</relationshipLabel>
    <relationshipName>Company_Setup1</relationshipName>
    <type>Lookup</type>
</CustomField>