objects/Company_Setup__c/fields/Default_Transportation_Resource__c.field-meta.xml
<CustomField>
    <fullName>Default_Transportation_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Transportation Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Company Setup (Default Transportation Resource)</relationshipLabel>
    <relationshipName>Company_Setup_T</relationshipName>
    <type>Lookup</type>
</CustomField>