objects/Company_Setup__c/fields/Default_Waste_Disposal_Resource__c.field-meta.xml
<CustomField>
    <fullName>Default_Waste_Disposal_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Waste Disposal Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Company Setup (Default Waste Disposal Resource)</relationshipLabel>
    <relationshipName>Company_Setup_WD</relationshipName>
    <type>Lookup</type>
</CustomField>