objects/Company_Setup__c/fields/Demurrage_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Demurrage_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demurrage GL Account</label>
    <referenceTo>GL_Account__c</referenceTo>
    <relationshipLabel>Company Setup (Demurrage GL Account)</relationshipLabel>
    <relationshipName>Company_Setup1</relationshipName>
    <type>Lookup</type>
</CustomField>