objects/Company_Setup__c/fields/Double_Time_Rate__c.field-meta.xml
<CustomField>
    <fullName>Double_Time_Rate__c</fullName>
    <label>Double Time Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time_Rate_Code</valueSetName>
    </valueSet>
</CustomField>