objects/Company_Setup__c/fields/Double_Time_Unit_Cost_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Double_Time_Unit_Cost_Multiplier__c</fullName>
    <description>T22710 - For Labor double time hour unit cost calculation</description>
    <label>Double Time Unit Cost Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>