objects/Company_Setup__c/fields/EFT_Address_2__c.field-meta.xml
<CustomField>
    <fullName>EFT_Address_2__c</fullName>
    <label>EFT Address 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>