objects/Company_Setup__c/fields/EFT_to_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>EFT_to_Bank_Name__c</fullName>
    <label>EFT to Bank Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>