objects/Company_Setup__c/fields/Equipment_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Equipment_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment GL Account</label>
    <referenceTo>GL_Account__c</referenceTo>
    <relationshipLabel>Company Setup (Equipment GL Account)</relationshipLabel>
    <relationshipName>Company_Setup2</relationshipName>
    <type>Lookup</type>
</CustomField>