objects/Company_Setup__c/fields/Equipment_Inter_co_Due_from_Account__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Inter_co_Due_from_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment Inter-co Due from Account</label>
    <referenceTo>GL_Account__c</referenceTo>
    <relationshipLabel>Company Setup (Equipment Inter-co Due from Account)</relationshipLabel>
    <relationshipName>Company_SetupzMsx</relationshipName>
    <type>Lookup</type>
</CustomField>