objects/Company_Setup__c/fields/GL_Integration_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>GL_Integration_Batch_Size__c</fullName>
    <label>GL Integration Batch Size</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>