objects/Company_Setup__c/fields/Home_Page__c.field-meta.xml
<CustomField>
    <fullName>Home_Page__c</fullName>
    <label>Home Page</label>
    <type>Url</type>
</CustomField>