objects/Company_Setup__c/fields/Hour_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Hour_Unit_of_Measure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hour Unit of Measure</label>
    <referenceTo>Unit_of_Measure__c</referenceTo>
    <relationshipLabel>Company Setup (Hour Unit of Measure)</relationshipLabel>
    <relationshipName>Company_Setup1</relationshipName>
    <type>Lookup</type>
</CustomField>