objects/Company_Setup__c/fields/Labor_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Labor_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Labor GL Account</label>
    <referenceTo>GL_Account__c</referenceTo>
    <relationshipLabel>Company Setup (Labor GL Account)</relationshipLabel>
    <relationshipName>Company_Setup3</relationshipName>
    <type>Lookup</type>
</CustomField>