objects/Company_Setup__c/fields/Labor_Inter_co_Due_from_Account__c.field-meta.xml
<CustomField>
    <fullName>Labor_Inter_co_Due_from_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Labor Inter-co Due from Account</label>
    <referenceTo>GL_Account__c</referenceTo>
    <relationshipLabel>Company Setup (Labor Inter-co Due from Account)</relationshipLabel>
    <relationshipName>Company_SetupzMsw</relationshipName>
    <type>Lookup</type>
</CustomField>