objects/Company_Setup__c/fields/Lines_to_Insert__c.field-meta.xml
<CustomField>
    <fullName>Lines_to_Insert__c</fullName>
    <label>Lines to Insert</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>