objects/Company_Setup__c/fields/Lump_Sum_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Lump_Sum_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bundled GL Account</label>
    <referenceTo>GL_Account__c</referenceTo>
    <relationshipLabel>Company Setup (Lump Sum GL Account)</relationshipLabel>
    <relationshipName>Company_Setup6</relationshipName>
    <type>Lookup</type>
</CustomField>