objects/Company_Setup__c/fields/Material_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Material_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material GL Account</label>
    <referenceTo>GL_Account__c</referenceTo>
    <relationshipLabel>Company Setup (Material GL Account)</relationshipLabel>
    <relationshipName>Company_Setup4</relationshipName>
    <type>Lookup</type>
</CustomField>