objects/Company_Setup__c/fields/Max_Days_to_Create_T_M__c.field-meta.xml
<CustomField>
    <fullName>Max_Days_to_Create_T_M__c</fullName>
    <label>Max Days to Create T&amp;M</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>