objects/Company_Setup__c/fields/Max_T_M_Copies_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Max_T_M_Copies_Per_Day__c</fullName>
    <label>Max T&amp;M Copies Per Day</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>