objects/Company_Setup__c/fields/Max_T_M_for_not_Approved_Customer__c.field-meta.xml
<CustomField>
    <fullName>Max_T_M_for_not_Approved_Customer__c</fullName>
    <label>Max T&amp;M for not Approved Customer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>