objects/Company_Setup__c/fields/MCNT_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>MCNT_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MCNT GL Account</label>
    <referenceTo>GL_Account__c</referenceTo>
    <relationshipLabel>Company Setup (MCNT GL Account)</relationshipLabel>
    <relationshipName>Company_Setup5</relationshipName>
    <type>Lookup</type>
</CustomField>