objects/Company_Setup__c/fields/Medicare__c.field-meta.xml
<CustomField>
    <fullName>Medicare__c</fullName>
    <description>Depreciated no longer needed - Ticket#20651</description>
    <inlineHelpText>###Depreciated###
ACV’s portion paid to fund the Medicare program.</inlineHelpText>
    <label>Medicare</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>