objects/Company_Setup__c/fields/Month_End_Close_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Month_End_Close_Start_Date__c</fullName>
    <label>Month End Close Start Date</label>
    <type>DateTime</type>
</CustomField>