objects/Company_Setup__c/fields/Month_End_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Month_End_End_Date__c</fullName>
    <label>Month End End Date</label>
    <type>DateTime</type>
</CustomField>