objects/Company_Setup__c/fields/Non_PTO_Off_Type__c.field-meta.xml
<CustomField>
    <fullName>Non_PTO_Off_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Non-PTO Off Type</label>
    <referenceTo>Off_Type__c</referenceTo>
    <relationshipLabel>Company Setup</relationshipLabel>
    <relationshipName>Company_Setup</relationshipName>
    <type>Lookup</type>
</CustomField>