objects/Company_Setup__c/fields/Overtime_Unit_Cost_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Unit_Cost_Multiplier__c</fullName>
    <description>T22710 - For Labor overtime hour unit cost calculation</description>
    <label>Overtime Unit Cost Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>