objects/Company_Setup__c/fields/Price_List__c.field-meta.xml
<CustomField>
    <fullName>Price_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price List</label>
    <referenceTo>Pricing__c</referenceTo>
    <relationshipLabel>Company Setup</relationshipLabel>
    <relationshipName>Company_Setup</relationshipName>
    <type>Lookup</type>
</CustomField>