objects/Company_Setup__c/fields/Quote_Default_Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Quote_Default_Payment_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Default Payment Term</label>
    <referenceTo>Payment_Term__c</referenceTo>
    <relationshipLabel>Company Setup</relationshipLabel>
    <relationshipName>Company_Setup</relationshipName>
    <type>Lookup</type>
</CustomField>