objects/Company_Setup__c/fields/Remittance_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Remittance_Address_1__c</fullName>
    <label>Remittance Address 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>