objects/Company_Setup__c/fields/Remittance_Name__c.field-meta.xml
<CustomField>
    <fullName>Remittance_Name__c</fullName>
    <label>Remittance Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>