objects/Company_Setup__c/fields/Review_Invoice_Section_No_of_Records__c.field-meta.xml
<CustomField>
    <fullName>Review_Invoice_Section_No_of_Records__c</fullName>
    <label>Review Invoice Section No of Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>