objects/Company_Setup__c/fields/Social_Security__c.field-meta.xml
<CustomField>
    <fullName>Social_Security__c</fullName>
    <description>Depreciated no longer needed - Ticket#20651</description>
    <inlineHelpText>###Depreciated###
ACV’s portion paid to fund the Social Security program.</inlineHelpText>
    <label>Social Security</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>