objects/Company_Setup__c/fields/Standard_Rate__c.field-meta.xml
<CustomField>
    <fullName>Standard_Rate__c</fullName>
    <label>Standard Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time_Rate_Code</valueSetName>
    </valueSet>
</CustomField>