objects/Company_Setup__c/fields/Subcontractors_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Subcontractors_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subcontractors GL Account</label>
    <referenceTo>GL_Account__c</referenceTo>
    <relationshipLabel>Company Setup (Subcontractors GL Account)</relationshipLabel>
    <relationshipName>Company_Setup7</relationshipName>
    <type>Lookup</type>
</CustomField>