objects/Company_Setup__c/fields/T_M_Overtime_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>T_M_Overtime_Multiplier__c</fullName>
    <label>T&amp;M Overtime Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>