objects/Company_Setup__c/fields/Waste_Disposal_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Waste_Disposal_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Waste Disposal GL Account</label>
    <referenceTo>GL_Account__c</referenceTo>
    <relationshipLabel>Company Setup (Waste Disposal GL Account)</relationshipLabel>
    <relationshipName>Company_Setup9</relationshipName>
    <type>Lookup</type>
</CustomField>