objects/Company_Setup__c/fields/Workers_Comp_Pct__c.field-meta.xml
<CustomField>
    <fullName>Workers_Comp_Pct__c</fullName>
    <inlineHelpText>ACV paid insurance provided to employees who suffer work-related injuries or illnesses. Specifically, this insurance helps pay for medical care, wages from lost work time and more.</inlineHelpText>
    <label>Workers Comp. %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>