objects/Company_Setup__c/validationRules/MakeSureNameIsUnique.validationRule-meta.xml
<ValidationRule>
    <fullName>MakeSureNameIsUnique</fullName>
    <active>true</active>
    <errorConditionFormula>AND(VLOOKUP($ObjectType.Company_Setup__c.Fields.Name, $ObjectType.Company_Setup__c.Fields.Name, Name) = Name, OR(ISNEW(), ISCHANGED(Name)))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Name you entered already exists.</errorMessage>
</ValidationRule>